--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,12 +125,144 @@ header a { color: #98a4ac; }
   main styling starts here
 =================================*/
 
+/*birthday-calender styling start here*/
 
+.days,
+.days + div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
 
+.form-container .form-group,
+.form-control {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: relative;
+}
 
+.form-control { margin-top: 20px; }
 
+.days > li {
+  -ms-flex-preferred-size: 13%;
+  flex-basis: 13%;
+}
 
+h3 {
+  padding: 10px 6%;
+  -webkit-border-top-right-radius: 2px; 
+  -moz-border-top-right-radius: 2px; 
+  border-top-right-radius: 5px;
+  -webkit-border-top-left-radius: 2px; 
+  -moz-border-top-left-radius: 2px; 
+  border-top-left-radius: 5px;
+  background: #ab9eee;
+  color: #dfd9f8;
+  text-align: right;
+  text-transform: uppercase;
+}
 
+.days li > ul {
+  min-height: 160px;
+  width: 91%;
+  margin-bottom: 40px;
+  background: #fff;
+  display: inline-block;
+  padding: 7px;
+}
+
+.days ul > li {
+  margin: 5px 2px;
+  background: #ab9eee;
+  color: #fff;
+  font-weight: 800;
+  flex-basis: 30%;
+  width: 40%;
+  text-align: center;
+  padding: 10px 5px;
+  align-items: center;
+  border-radius: 4px;
+}
+
+label {
+  display: block;
+  color: #7e8b95;
+  font-size: 24px;
+}
+
+textarea {
+  min-width: 100%;
+  min-height: 400px;
+  padding: 10px 2%;
+}
+
+.days + div > div:first-child {
+  -ms-flex-preferred-size: 60%;
+  flex-basis: 60%;
+} 
+
+.days + div > div:last-child {
+  -ms-flex-preferred-size: 35%;
+  flex-basis: 35%;
+} 
+
+.form-group input {
+  width: 70%;
+  padding: 15px 3%;
+  background: #fff;
+  border: 1px solid #ab9eee;
+   -webkit-border-radius: 4px; 
+  -moz-border-radius: 4px; 
+  border-radius: 4px;
+  margin: 10px 0;
+}
+
+.form-container span {
+  margin: 12px 0;
+  font-size: 12px;
+  transition: all .3s ease;
+}
+
+.success { 
+  color: #00c851;
+  transform: scale(0);
+}
+
+.error {
+  width: 38%;
+  padding: 10px;
+  border-radius: 5px;
+  background: #dc3545;
+  color: #fff;
+  position: absolute;
+  top: -13px;
+  right: 100px;
+  transform: scale(0);
+}
+
+.visible { transform: scale(1);}
+
+.form-control input {
+  width: 50%;
+  padding: 25px 12%;
+  border : none;
+   -webkit-border-radius: 4px; 
+  -moz-border-radius: 4px; 
+  border-radius: 4px;
+  background: #0186ef;
+  color: #fff;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+/*birthday-calender styling end here*/
 
 /*=================================
   main styling ends here
